# Swan-test

./: CMakeLists.txt  contactbase.cpp  contactbase.h  contactwithphone.cpp  contactwithphone.h  contactwithphoto.cpp  contactwithphoto.h  main.cpp  main.qml  test.pro  test.qbs
